# appartment-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPLETE_REFACTORING.md  DEVELOPMENT_SETUP.md  DOCKER_OPTIMIZATION.md  HOT_RELOAD_GUIDE.md  README.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  SETUP_COMPLETE.md  TODO.md  UV_MIGRATION_SUCCESS.md  dev.sh  docker-compose.gcs.yml  docker-compose.yml  mkdocs.yml  package-lock.json  pyproject.toml  x.ipynb
.github/workflows/: deploy.yml  docs.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.uv  README.md  alembic.ini  pyproject.toml  requirements.txt  test_grouped_transactions.py
backend/alembic/: env.py
backend/alembic/versions/: 30257fbe1e49_create_initial_tables.py  a1b2c3d4e5f6_add_minio_temporal_columns.py  create_grouped_transactions_view.sql  f7g8h9i0j1k2_add_redesigns_count.py  g8h9i0j1k2l3_add_better_auth_tables.py  h9i0j1k2l3m4_add_id_token_to_ba_account.py  i0j1k2l3m4n5_rename_minio_to_storage.py  j1k2l3m4n5o6_add_promoted_redesign_to_photos.py  k2l3m4n5o6p7_add_building_floors_to_properties.py
backend/app/: main.py
backend/app/api/: analysis.py  documents.py  documents.py.backup  photos.py  properties.py  users.py
backend/app/api/routes/: webhooks.py
backend/app/core/: better_auth_security.py  cache.py  config.py  database.py  i18n.py  logging_config.py  security.py
backend/app/models/: __init__.py  analysis.py  document.py  photo.py  property.py  user.py
backend/app/prompts/v1/: dp_classify_document.md  dp_process_charges.md  dp_process_diagnostic.md  dp_process_other.md  dp_process_pv_ag.md  dp_process_tax.md  dp_synthesize_results.md  redesign_fancy_dark_modern.md
backend/app/schemas/: __init__.py  document.py  photo.py  property.py
backend/app/services/: __init__.py  claude_service.py  document_service.py  document_service_v2.py  dvf_service.py  langchain_service.py  minio_service.py  storage.py
backend/app/services/ai/: document_processor.py  image_generator.py
backend/app/services/documents/: bulk_processor.py  parser.py
backend/app/workflows/: __init__.py  activities.py  client.py  document_workflows.py  worker.py
backend/scripts/: DVF_IMPORT_GUIDE.md  PRICE_FIX_CHANGELOG.md  bulk_import_dvf.sql  delete_all_dvf.sql  fast_import_all_dvf.sh  fast_import_all_dvf_v2.sh  fast_import_dvf_final.sh  fix_prices.sql  import_2021_only.sh  import_all_dvf.py  import_dvf.py  import_dvf_chunked.py  import_dvf_v1.py  import_dvf_v2.py  init_db.py  migrate_users_to_better_auth.py  reimport_dvf.sh  rollback_dvf_import.py  setup_database.sh  start.sh  start_production.sh  test_import_2023.sh  test_import_2023_v2.sh  validate_dvf_data.sql
backend/tests/: test_dvf_service.py
docs/: GETTING_STARTED.md  index.md
docs/architecture/: data-flow.md  index.md  overview.md
docs/backend/: ai-services.md  api-reference.md  database.md  index.md  prompt-templates.md
docs/deployment/: docker.md  gcp.md  index.md  infrastructure.md
docs/development/: local-setup.md
docs/frontend/: index.md  internationalization.md  pages.md
docs/getting-started/: configuration.md  quickstart.md
frontend/: .dockerignore  .env.local.example  .npmrc  Dockerfile  Dockerfile.pnpm  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/messages/: en.json  fr.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Providers.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts
frontend/src/types/: index.ts
infra/terraform/: README.md  backend.hcl.example  main.tf  terraform.tfvars.example
(+16 files in other folders)
